@@ -70,6 +70,6 @@ void store_add(struct store *self, char *string, size_t len) {
     }
 }
 
-bool store_contains(struct store *self, char *string, size_t len) {
+int store_contains(struct store *self, char *string, size_t len) {
     return string_list_contains(&self->cache, string, len);
 }
