@@ -54,7 +54,7 @@ void store_add(struct store *self, char *string, size_t len);
 /*
  * Return true if the cache contains the string
  */
-bool store_contains(struct store *self, char *string, size_t len);
+int store_contains(struct store *self, char *string, size_t len);
 
 /**
  * Macro that wraps up the init function in order to reduce typing.
