@@ -1,6 +1,7 @@
 18 May 2018: Wouter
 	- More review fixes, store.c, error log and fixup of getline return,
-	  and not variable use before declaration.
+	  and not variable use before declaration.  Spelling, strdup,
+	  bool removal for portability.  Removed unsigned comparison warning.
 
 14 May 2018: Wouter
 	- Patch set from Martin Sehnoutka,
